--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 # Core AI and ML libraries
 agno>=0.3.0
 groq>=0.4.0
-ollama>=0.1.0
+pypdf>=3.0.0
+
 
 # FastAPI and web framework
 fastapi>=0.104.0
